--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     According to a <a href="https://www.who.int/pbd/deafness/estimates/en/" target="_blank">recent report of the World Health Organisation</a>, 
                     around 489 million people have disabling hearing loss (6.1 percent of the world's population). The WHO estimates that this
                     number will rise to 630 million by 2030 and up to 930 million in 2050. Of all people with disabling hearing loss, 
-                    around 15 percent (that is around \href{https://wfdeaf.org/our-work/}{70 million people}) are profoundly deaf.
+                    around 15 percent (that is around <a href="https://wfdeaf.org/our-work/" target="_blank">70 million people</a>) are profoundly deaf.
 
                     Several <a href="https://link.springer.com/article/10.1007/s11145-004-5894-0" target="_blank">studies</a> have shown
                     that it is relatively difficult for many deaf people to learn to read. 
