--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                   <h5>Fundamental scientific questions</h5>
                   <p class="mb-4">
                     The language sciences have focused predominantly on spoken languages. 
-                    We still know relatively little about the linguistic structure of sign languages and how sign languages, 
-                    both individually and collectively, fit into broader linguistic typologies. A complicating factor is that 
+                    We still know relatively little about the linguistic structure of sign languages and how sign languages 
+                    fit into broader linguistic typologies. A complicating factor is that 
                     communities of sign language users worldwide are typically highly heterogeneous. As a consequence, 
                     a large amount of variation is often found, both in terms of lexicon and in terms of grammar, 
                     even within a single sign language community. An important theoretical challenge, then, is to 
@@ -125,7 +125,7 @@
                     differently by the brain. 
                     
                     Finally, much remains to be discovered about how linguistic features that are 
-                    specific to sign languages---such as the linguistic use of space---are acquired and processed by sign language 
+                    specific to sign languages-such as the linguistic use of space-are acquired and processed by sign language 
                     users and learners.
                   </p>
 
