--- a/people.html
+++ b/people.html
@@ -143,8 +143,8 @@
                       Lab managers
                     </h5>
                     <p class="text-black-50 mb-3">
-                      Ray Pelupessy (Lab Manager) <br>
-                      Galya Stern (Lab Manager) <br>
+                      Ray Pelupessy <br>
+                      Galya Stern <br>
                       <br>
                     </p>
 
@@ -160,7 +160,7 @@
             <p class="text-black-50 mb-3">
               <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
               <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
-              <a href="https://pietermanders.com/" target="_blank">Pieter Manders</a> (Lecturer Camera Techniques and Video Editing ) <br>
+              <a href="https://pietermanders.com/" target="_blank">Pieter Manders</a> (Lecturer Camera Techniques and Video Editing) <br>
               <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
               <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
             </p>
