--- a/index.html
+++ b/index.html
@@ -110,23 +110,22 @@
                   <h5>Fundamental scientific questions</h5>
                   <p class="mb-4">
                     The language sciences have focused predominantly on spoken languages. 
-                    We still know relatively little about the linguistic structure of sign languages and how sign languages 
-                    fit into broader linguistic typologies. A complicating factor is that 
-                    communities of sign language users worldwide are typically highly heterogeneous. As a consequence, 
-                    a large amount of variation is often found, both in terms of lexicon and in terms of grammar, 
-                    even within a single sign language community. An important theoretical challenge, then, is to 
+                    We still know relatively little about the linguistic structure of sign languages. A complicating factor is that 
+                    there is often a large amount of variation, both in terms of lexicon and in terms of grammar, 
+                    even within a single sign language community. An important theoretical challenge is to 
                     characterise sign languages in a way that does justice to this variation while also capturing 
                     what is <i>not</i> subject to variation.
                     
                     Another open question concerns the relationship between conventionalised elements of sign languages and 
                     non-conventionalised, depictive elements which are commonplace in visual communication 
                     (especially alongside sign in purely visual communication but also alongside speech in multimodal communication), 
-                    how these elements are integrated structurally and semantically, and whether they are processed the same or 
-                    differently by the brain. 
+                    how these elements are integrated structurally and semantically.
+                    <!-- , and whether they are processed the same or 
+                    differently by the brain.  -->
                     
-                    Finally, much remains to be discovered about how linguistic features that are 
+                    <!-- Finally, much remains to be discovered about how linguistic features that are 
                     specific to sign languages-such as the linguistic use of space-are acquired and processed by sign language 
-                    users and learners.
+                    users and learners. -->
                   </p>
 
                   <hr class="d-none d-lg-block mb-5 ml-0" />
