update index and methods

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                     even within a single sign language community. An important theoretical challenge is to 
                     characterise sign languages in a way that does justice to this variation while also capturing 
                     what is <i>not</i> subject to variation.
-                    
+                  </p>
+                  <p class="mb-4">
                     Another open question concerns the relationship between conventionalised elements of sign languages and 
                     non-conventionalised, depictive elements which are commonplace in visual communication 
                     (especially alongside sign in purely visual communication but also alongside speech in multimodal communication), 
