--- a/research-methods.html
+++ b/research-methods.html
@@ -72,30 +72,46 @@
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
-
-                    <h5>New methods</h5>
-
+                    <h2 class="section-heading">New methods</h2>
+                    
                     <p class="mb-4">
                       We develop <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank">new methods for data collection, 
-                      data analysis, and  visualisation</a>. For instance, we develop new experimental elicitation methods, 
+                      data analysis, and  visualisation</a>.
+                    </p>
+
+                    <h5>Data collection</h5>
+
+                    <p class="mb-4">
+                      For instance, we develop new experimental elicitation methods, 
                       use motion capture equipment to obtain precise 3D measurements of the movements of a signer, 
                       and depth-cameras to obtain fine-grained 3D measurements of the signer's facial expressions. 
                       We use machine learning methods (e.g., clustering techniques) to analyse such data, and methods 
                       from computer graphics and animation (e.g., virtual humans) to visualise the results of our data analyses. 
                     </p>
 
+                    <hr class="d-none d-lg-block mb-5 ml-0" />
+                    <h5>Data analysis</h5>
                     <p class="mb-4">
-                      In addition, we also develop 
-                      <a href="https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf" target="_blank">methods for data annotation</a> 
-                      and for 
-                      <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assessing the reliability</a> of such annotations.
+                      We use machine learning techniques (e.g., clustering) to analyse data obtained with motion capture equipment 
+                      and depth-cameras. We are also developing a 
+                      <a href="https://nonmanuals.net/" target="_blank">standard for the annotation on non-manual elements in sign language
+                      data</a>, and 
+                      methods to <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assess the reliability</a> of such annotations.
                     </p>
+
+                    <hr class="d-none d-lg-block mb-5 ml-0" />
+                    <h5>Visualization</h5>
+                    <p class="mb-4">
+                      Drawing on recent developments in computer graphics and animation (e.g., virtual humans)
+                      we are developing new methods to visualise our measurements and the results of our data analyses.
+                    </p>
+
                     
                     <hr class="d-none d-lg-block mb-5 ml-0" />
 
                 </div>
             </div>
-            <!-- Column for GIF -->
+          <!-- Column for GIF -->
           <!-- <div class="col-6 col-md-5  order-1 order-md-12 ml-md-5"> -->
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
             <!-- <div class="project-text pb-1 w-100 my-auto text-left"> -->
