--- a/research-methods.html
+++ b/research-methods.html
@@ -72,31 +72,30 @@
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
-                    <h2 class="section-heading">New methods</h2>
-                    
-                    <p class="mb-4">
-                      We develop <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank">new methods for data collection, 
-                      data analysis, and  visualisation</a>.
-                    </p>
+                    <h2 class="section-heading mb-5">New methods</h2>
+                  
 
-                    <h5>Data collection</h5>
+                    <h5>Data collection methods</h5>
 
                     <p class="mb-4">
-                      For instance, we develop new experimental elicitation methods, 
-                      use motion capture equipment to obtain precise 3D measurements of the movements of a signer, 
-                      and depth-cameras to obtain fine-grained 3D measurements of the signer's facial expressions. 
-                      We use machine learning methods (e.g., clustering techniques) to analyse such data, and methods 
-                      from computer graphics and animation (e.g., virtual humans) to visualise the results of our data analyses. 
+                      We have built a state-of-the-art <a href="https://arxiv.org/abs/2409.01901" target="_blank">motion capture</a>laboratory, 
+                      where we obtain precise 3D measurements of the movements of signers.
+                      We have also developed a new method to obtain fine-grained 3D measurements of the signer's 
+                      <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank">facial expressions</a>
+                      using depth-cameras.
+                      Finally, we have developed several new experimental elicitation paradigms to obtain controlled data on specific 
+                      constructions in sign languages.
                     </p>
 
                     <hr class="d-none d-lg-block mb-5 ml-0" />
                     <h5>Data analysis</h5>
                     <p class="mb-4">
                       We use machine learning techniques (e.g., clustering) to analyse data obtained with motion capture equipment 
-                      and depth-cameras. We are also developing a 
-                      <a href="https://nonmanuals.net/" target="_blank">standard for the annotation on non-manual elements in sign language
-                      data</a>, and 
-                      methods to <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assess the reliability</a> of such annotations.
+                      and depth-cameras. 
+                      We are also developing a 
+                      <a href="https://nonmanuals.net/" target="_blank">standard for the annotation</a> 
+                      of non-manual elements in sign language data, and methods to 
+                      <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assess the reliability</a> of such annotations.
                     </p>
 
                     <hr class="d-none d-lg-block mb-5 ml-0" />
