--- a/research-theory.html
+++ b/research-theory.html
@@ -72,10 +72,20 @@
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
+                    <h2 class="section-heading mb-5">Theory</h2>
 
-                    <h5>Theory development: General scope and methods</h5>
+                    <h5>General scope</h5>
 
                     <p class="mb-4">
+                      We develop formal and computational theories of the syntax and semantics of various constructions in sign languages, 
+                      including various clause types (especially interrogatives and imperatives), polarity marking, number marking on nouns, 
+                      and clause embedding. Besides manual signs we also pay particular attention to non-manual features such as facial expressions, 
+                      which play a crucial role in many of these constructions, and features characteristic of the signed modality, 
+                      such as use of space and iconicity. Our theories are often informed by data from several sign languages, and also 
+                      aim to elucidate commonalities and differences between signed and spoken languages. 
+                    </p>
+
+                    <!-- <p class="mb-4">
                       We investigate how signs and signed sentences are structured and interpreted across sign languages,
                       and how new signs and structures emerge and evolve over time. We investigate Sign Language of the Netherlands,
                       but also many other sign languages, including Filipino Sign Language, Catalan Sign Language, and Russian Sign Language.
@@ -91,7 +101,7 @@
                       signed sentences are structured and how they are interpreted. These models make precise predictions, which are tested
                       on further data, for instance from other sign languages. This allows us to refine our theoretical models further and further,
                       and gain a better understanding of how sign languages, and human languages in general, work.
-                    </p>
+                    </p> -->
                     <!-- <p class="mb-4">
                       Comparative studies on languages have revealed striking differences as well as interesting similarities
                       between different languages and language families. Traditionally, however, these studies have focused
