--- a/research-methods.html
+++ b/research-methods.html
@@ -78,8 +78,8 @@
                     <h5>Data collection methods</h5>
 
                     <p class="mb-4">
-                      We have built a state-of-the-art <a href="https://arxiv.org/abs/2409.01901" target="_blank">motion capture</a>laboratory, 
-                      where we obtain precise 3D measurements of the movements of signers.
+                      We have built a state-of-the-art <a href="https://arxiv.org/abs/2409.01901" target="_blank">motion capture</a> 
+                      laboratory, where we obtain precise 3D measurements of the movements of signers.
                       We have also developed a new method to obtain fine-grained 3D measurements of the signer's 
                       <a href="https://raco.cat/index.php/FEAST/article/view/422433" target="_blank">facial expressions</a>
                       using depth-cameras.
