--- a/research-overview.html
+++ b/research-overview.html
@@ -97,7 +97,7 @@
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
                 
                   <div class="embed-responsive embed-responsive-16by9">
-                    <img src="images/pillars.jpg" class="img-fluid" alt="The four pillars of our research.">
+                    <img src="images/pillars.jpg" class="img-fluid align-top" alt="The four pillars of our research.">
                   </div>
           </div>
         </div>
