fix images on Research pages

--- a/research-datasets.html
+++ b/research-datasets.html
@@ -111,7 +111,7 @@
           
           <div class="col-12 col-md-5 order-1 order-md-12 ml-md-5">
                 
-                  <div class="embed-responsive embed-responsive-16by9">
+                  <div class="mb-5">
                     <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
                   </div>
           </div>
