update publications Roland

--- a/media.html
+++ b/media.html
@@ -63,6 +63,36 @@
 <section class="projects-section bg-light fadeIn" id="Media">
     <div class="container-fluid">
 
+      <!-- Challenge Row Interview Revincluso-->
+      <div class="row align-items-start no-gutters mb-4 ">
+        <!-- Column for text -->
+        <div class="col-12 col-md order-2">
+
+          <div class="project-text pb-1 w-100 text-left textDIV">
+              <h5>Interview with Roland Pfau</h5>
+              <p class="mb-4">
+                <b>Publisher:</b> <a href="https://periodicos.ufabc.edu.br/index.php/revincluso/index" target="_blank">Revincluso</a><br>
+                <b>Medium:</b> Article<br>
+                <b>Language:</b> Abstract in English, Brazillian Portugese, Spanish; Interview in English <br>
+                <b>Date:</b> April 2024 <br>
+                <b>Link:</b> Read interview <a href="https://periodicos.ufabc.edu.br/index.php/revincluso/article/view/873" target="_blank">here</a><br>
+          </div>
+        </div>
+
+        <!-- Column for picture -->
+        <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
+          <a href="https://periodicos.ufabc.edu.br/index.php/revincluso/article/view/873" target="_blank"><img src="images/revincluso.png" class="img-fluid" alt="Cover page."></a>
+        </div>
+
+      </div>
+
+      <!-- Challenge row block-->
+      <div class="row align-items-start no-gutters  mb-lg-5">
+        <div class="project-text  w-100 text-left textDIV">
+          <hr class="d-none d-lg-block mb-0 ml-0" />
+        </div>
+      </div>
+
 
       <!-- Challenge Row NAP-->
       <div class="row align-items-start no-gutters mb-4 ">
