--- a/research-datasets.html
+++ b/research-datasets.html
@@ -111,8 +111,11 @@
           
           <div class="col-12 col-md-5 order-1 order-md-12 ml-md-5">
                 
-                  <div class="mb-5">
+                  <div class="mb-5 mt-20">
                     <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
+                  </div>
+                  <div class="mb-5 mt-4">
+                    <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
                   </div>
           </div>
         </div>
