--- a/research-overview.html
+++ b/research-overview.html
@@ -96,7 +96,7 @@
           <!-- Column for images -->
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
               <div class="mb-5">
-                    <img src="images/pillars.jpg" class="img-fluid" alt="The four pillars of our research.">
+                    <img src="images/pillars.png" class="img-fluid" alt="The four pillars of our research.">
               </div>
           </div>
           
