--- a/research-theory.html
+++ b/research-theory.html
@@ -120,7 +120,7 @@
                       we also want to know in how far sign languages differ from each other. And even more importantly: 
                       do they differ along the same lines as spoken languages do?
                     </p> -->
-                    <hr class="d-none d-lg-block mb-5 ml-0" />
+                    <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
 
                     <h5 class="mb-4">Some specific focus areas</h5>
 
