--- a/people.html
+++ b/people.html
@@ -137,7 +137,7 @@
                       <!-- Master and bachelor students with ongoing thesis projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      
+
                     </p> -->
                     <h5>
                       Lab managers
@@ -168,6 +168,7 @@
                PhD alumni
              </h5>
               <p class="text-black-50 mb-3">
+              <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (2024)<br>
                <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021)<br>
                <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
                <a href="https://www.hu.nl/onderzoek/onderzoekers/eveline-boers-visker" target="_blank">Eveline Boers-Visker</a> (2020)<br>
@@ -183,10 +184,10 @@
               Galya Stern (BA Linguistics).<br>
             </p>
             <p class="text-black-50 mb-1">
-              <b>2023</b>: 
+              <b>2023</b>:
               Jari Andersen (MSc Software Engineering),
               Jan Pieter Kroeb (BSc CS),
-              Sep Huls (BSc CS), 
+              Sep Huls (BSc CS),
               Marleen Gaasbeek (MSc Logic),
               Natalie Hollain (MSc Data Science),
               Lisa Lepp (MA Linguistics),
