correction in media (changed title)

--- a/media.html
+++ b/media.html
@@ -69,7 +69,7 @@
         <div class="col-12 col-md order-2">
 
           <div class="project-text pb-1 w-100 text-left textDIV">
-              <h5>Article about ZINinNGT app</h5>
+              <h5>ZINinNGT: Digital support for hearing parents of deaf children in learning NGT</h5>
               <p class="mb-4">
                 <b>Publisher:</b> <a href="https://www.hetwap.nl/" target="_blank">Het WAP</a><br>
                 <b>Medium:</b> Article<br>
