--- a/research-applications.html
+++ b/research-applications.html
@@ -235,7 +235,7 @@
           <div class="col-12 col-md order-2">
 
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <h5>Communication</h5>
+              <h5>Reducing communication barriers between deaf and hearing individuals</h5>
               <p class="mb-4">
                 Reducing communication barriers is, technologically, by far the most challenging application domain, 
                 because communication involves two-way interaction with open-ended vocabulary, complex grammatical constructions, 
