--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   </p>
 
                   <hr class="d-none d-lg-block mb-5 ml-0" />
-                  <h5>Fundamental scientific questions</h5>
+                  <h5>Scientific challenges</h5>
                   <p class="mb-4">
                     The language sciences have focused predominantly on spoken languages. 
                     We still know relatively little about the linguistic structure of sign languages. A complicating factor is that 
@@ -128,7 +128,7 @@
                     what is <i>not</i> subject to variation.
                   </p>
                   <p class="mb-4">
-                    Another open question concerns the relationship between conventionalised elements of sign languages and 
+                    Another fundamental question concerns the relationship between conventionalised elements of sign languages and 
                     non-conventionalised, depictive elements which are commonplace in visual communication 
                     (especially alongside sign in purely visual communication but also alongside speech in multimodal communication), 
                     how these elements are integrated structurally and semantically.
@@ -141,7 +141,7 @@
                   </p>
 
                   <hr class="d-none d-lg-block mb-5 ml-0" />
-                  <h5>Major technological challenges</h5>
+                  <h5>Technological challenges</h5>
                   <p class="mb-4">
                     Sign language technologies are also highly underdeveloped. For instance, while tools like ChatGPT and Google Translate 
                     already work for more than 100 spoken languages, they don't work for any sign language yet. A major stumbling block, 
