--- a/research-applications.html
+++ b/research-applications.html
@@ -76,12 +76,12 @@
 
                 <h5 class="mt-5">Application domains</h5>
                 <p class="mb-4">
-                  We are interested in four application domains: 
+                  We are particularly interested in the following application domains: 
                     <ul>
                       <li>Supporting sign language <strong>learners</strong></li>
-                      <li>Improving <strong>accessibility</strong> of information and services for deaf individuals</li>
+                      <li>Improving <strong>accessibility</strong> of public services and information for deaf people</li>
                       <li>Making the <strong>linguistic and cultural heritage</strong> of deaf communities visible and searchable</li>
-                      <li>Reducing <strong>communication</strong> barriers between deaf and hearing individuals</li>
+                      <li>Reducing <strong>communication</strong> barriers between deaf and hearing people</li>
                     </ul>
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0 mt-5" />
@@ -235,7 +235,7 @@
           <div class="col-12 col-md order-2">
 
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <h5>Reducing communication barriers between deaf and hearing individuals</h5>
+              <h5>Reducing communication barriers between deaf and hearing people</h5>
               <p class="mb-4">
                 Reducing communication barriers is, technologically, by far the most challenging application domain, 
                 because communication involves two-way interaction with open-ended vocabulary, complex grammatical constructions, 
