--- a/people.html
+++ b/people.html
@@ -179,7 +179,7 @@
              <p class="text-black-50 mb-1">
               <b>2024</b>:
               Lisa Loy (rMA Linguistics),
-              Oline Ranum (MSc AI),
+              Oline Ranum (MSc AI, <b>winner Amsterdam AI Thesis Award</b>),
               Elynn Weijland (MSc Logic),
               Galya Stern (BA Linguistics).<br>
             </p>
