--- a/people.html
+++ b/people.html
@@ -179,7 +179,7 @@
              <p class="text-black-50 mb-1">
               <b>2024</b><br>
               Lisa Loy (rMA Linguistics)<br>
-              Oline Ranum (MSc AI, <b>winner Amsterdam AI Thesis Award</b>)<br>
+              Oline Ranum (MSc AI) <b>Winner Amsterdam AI Thesis Award</b><br>
               Elynn Weijland (MSc Logic)<br>
               Galya Stern (BA Linguistics).<br>
             </p>
