--- a/people.html
+++ b/people.html
@@ -169,7 +169,7 @@
              </h5>
               <p class="text-black-50 mb-3">
               <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (2024)<br>
-               <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021)<br>
+               <a href="https://ulrikaklomp.com/" target="_blank"> Ulrika Klomp</a> (2021) <b>Winner Best Dissertation Award, Dutch Linguistics Association</b><br>
                <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">Marloes Oomen</a> (2020)<br>
                <a href="https://www.hu.nl/onderzoek/onderzoekers/eveline-boers-visker" target="_blank">Eveline Boers-Visker</a> (2020)<br>
              </p>
