--- a/people.html
+++ b/people.html
@@ -197,7 +197,8 @@
                 Sybil Vachaudez (MA Linguistics)<br>
             </p>
             <p class="text-black-50 mb-1">
-              <b>2022</b>: Britt van Gemert (MSc AI)<br>
+              <b>2022</b><br>
+               Britt van Gemert (MSc AI)<br>
               Loes Gennissen (BSc AI)<br>
               Merel Atia (BSc AI)<br>
               Roel de jeu (BSc CS)<br>
@@ -211,7 +212,8 @@
               Nicole Tsiane (BA Linguistics).<br>
              </p>
              <p class="text-black-50 mb-1">
-               <b>2021</b>: Mark van Hofwegen (BSc AI)<br>
+               <b>2021</b><br>
+                Mark van Hofwegen (BSc AI)<br>
                  Matthijs van de Vijver (BSc AI)<br>
                  Alon Shilo (BSc AI)<br>
                  Merel van Engelen (BA Linguistics)<br>
@@ -220,7 +222,8 @@
                  Bjorn Lichtenberg (MA Linguistics).<br>
              </p>
              <p class="text-black-50 mb-3">
-              <b>2020</b>: Lyke Esselink (BSc AI)<br>
+              <b>2020</b><br>
+               Lyke Esselink (BSc AI)<br>
               Shani Mende-Gillings (BSc AI)<br>
               Judith Corsel (BSc AI)<br>
               Jasmijn Bleijlevens (BA University College)<br>
