--- a/people.html
+++ b/people.html
@@ -181,7 +181,7 @@
               Lisa Loy (rMA Linguistics)<br>
               Oline Ranum (MSc AI) <b>Winner Amsterdam AI Thesis Award</b><br>
               Elynn Weijland (MSc Logic)<br>
-              Galya Stern (BA Linguistics).<br>
+              Galya Stern (BA Linguistics)<br>
             </p>
             <p class="text-black-50 mb-1">
               <b>2023</b><br>
@@ -209,7 +209,7 @@
               Anne ten Klooster (BA Linguistics)<br>
               Edoardo Leo (MA Linguistics)<br>
               Lotte Rusch (MA Linguistics)<br>
-              Nicole Tsiane (BA Linguistics).<br>
+              Nicole Tsiane (BA Linguistics)<br>
              </p>
              <p class="text-black-50 mb-1">
                <b>2021</b><br>
@@ -219,7 +219,7 @@
                  Merel van Engelen (BA Linguistics)<br>
                  Miguel Hacham (BA Linguistics)<br>
                  Kristel de Laat (BA Linguistics)<br>
-                 Bjorn Lichtenberg (MA Linguistics).<br>
+                 Bjorn Lichtenberg (MA Linguistics)<br>
              </p>
              <p class="text-black-50 mb-3">
               <b>2020</b><br>
@@ -234,7 +234,7 @@
               Lotte Rusch (BA Linguistics)<br>
               Laura Spijker (MA Linguistics)<br>
               Door Spruijt (RMA Linguistics)<br>
-              Marissa Verbokkem (BA Linguistics).<br>
+              Marissa Verbokkem (BA Linguistics)<br>
                <!-- Bram Smit (2019)<br>
                Sander Brinkhuijsen (2019)<br>
                Steven de Weille (2019)<br>
