footer signopsis uitgecomment
something is wrong with the footer on the signopsis page; this needs no be fixed. It floats in the middle of the page. I commented it out for now, until it is fixed

--- a/signopsis.html
+++ b/signopsis.html
@@ -276,10 +276,10 @@
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50">
+<!-- footer class="footer bg-white small text-center text-black-50">
   <div style="min-height:150%;">
     <!-- <br>&copy;2020 SignLab Amsterdam -->
-    <br>
+    <!-- br>
     <i class="bi bi-envelope"></i>: signlab@uva.nl
   </div>
 </footer>
