footer signopsis en taalfout research datasets

--- a/research-datasets.html
+++ b/research-datasets.html
@@ -86,7 +86,7 @@
                     <hr class="d-none d-lg-block mb-5 ml-0" />
                     <h5>The NGT lexicon</h5>
                     <p class="mb-4">
-                      We are also maintain the 
+                      We also maintain the 
                       <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank">NGT lexicon</a>
                       on Global Signbank, which was initially developed by Radboud University as well.
                       We have added thousands of signs as well as detailed information 
