--- a/signopsis.html
+++ b/signopsis.html
@@ -252,7 +252,7 @@
         <!-- This is empty -->
       </div>
     </div>
-    </div>
+    <!-- </div> -->
 
 
 
@@ -276,10 +276,10 @@
 </section>
 
 <!-- Footer-->
-<!-- footer class="footer bg-white small text-center text-black-50">
-  <div style="min-height:150%;">
+<footer class="footer bg-white small text-center text-black-50">
+  <div style="line-height:150%;">
     <!-- <br>&copy;2020 SignLab Amsterdam -->
-    <!-- br>
+    <br>
     <i class="bi bi-envelope"></i>: signlab@uva.nl
   </div>
 </footer>
